--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/fex-team/kityminder-editor",
   "devDependencies": {
     "cz-conventional-changelog": "^1.1.5",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-angular-templates": "~0.5.0",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^0.5.0",
@@ -48,6 +48,7 @@
     "uglify-js": "^2.8.29"
   },
   "dependencies": {
+    "bower": "^1.8.14",
     "kityminder-core": "^1.4.50"
   },
   "config": {
